--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'androidx.room:room-common:2.4.3'
+    implementation 'androidx.room:room-runtime:2.4.3'
+    annotationProcessor 'androidx.room:room-compiler:2.4.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
-
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
