--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
         android:theme="@style/Theme.ECommerce"
         tools:targetApi="31" >
         <activity
+            android:name=".activity.AddPromoCodeActivity"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".activity.AddAddressActivity"
             android:exported="false" >
             <meta-data
